--- a/src/app/features/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/features/inventory/inventory-list/inventory-list.component.html
@@ -1,6 +1,16 @@
 <div class="p-6">
   <h2 class="text-2xl font-bold mb-4">Inventory Management</h2>
 
+  <div class="flex justify-between items-center mb-4">
+    <h2 class="text-2xl font-bold">Inventory Management</h2>
+    
+    <mat-form-field appearance="outline" class="w-1/3">
+      <mat-label>Search SKU or Product Name</mat-label>
+      <input matInput [formControl]="searchControl" placeholder="Ex. Dell">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </div>
+
   <table mat-table [dataSource]="(products$ | async) || []" class="mat-elevation-z8 w-full">
 
     <ng-container matColumnDef="sku">
@@ -42,6 +52,9 @@
       <td mat-cell *mat-cell="let product">
         <button mat-icon-button color="primary" (click)="onEdit(product)">
           <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="onDelete(product.id)">
+          <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
