--- a/src/app/features/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/features/inventory/inventory-list/inventory-list.component.html
@@ -1,17 +1,24 @@
 <div class="p-6">
   <h2 class="text-2xl font-bold mb-4">Inventory Management</h2>
 
-  <div class="flex justify-between items-center mb-4">
+ <div class="flex justify-between items-center mb-4">
     <h2 class="text-2xl font-bold">Inventory Management</h2>
     
-    <mat-form-field appearance="outline" class="w-1/3">
-      <mat-label>Search SKU or Product Name</mat-label>
-      <input matInput [formControl]="searchControl" placeholder="Ex. Dell">
-      <mat-icon matSuffix>search</mat-icon>
-    </mat-form-field>
+    <div class="flex gap-4 items-center w-2/3 justify-end">
+      <mat-form-field appearance="outline" class="w-1/2 mt-4">
+        <mat-label>Search SKU or Product Name</mat-label>
+        <input matInput [formControl]="searchControl">
+        <mat-icon matSuffix>search</mat-icon>
+      </mat-form-field>
+
+      <button mat-raised-button color="primary" (click)="openAddDialog()">
+        <mat-icon>add</mat-icon>
+        Add Product
+      </button>
+    </div>
   </div>
 
-  <table mat-table [dataSource]="(products$ | async) || []" class="mat-elevation-z8 w-full">
+  <table mat-table [dataSource]="(filteredProducts$ | async) || []" class="mat-elevation-z8 w-full">
 
     <ng-container matColumnDef="sku">
       <th mat-header-cell *mat-header-cell [style.width.%]="15"> SKU </th>
